# babylonjs_template

./: .env.example  CLAUDE.md  README.md  TODO  TODO.archive  VERIFICATION.md  compose.yml  plan.md  prompt.md
.claude/: settings.json
.claude/rules/: backlog-layer-model.md  code-comment-quality.md  coverage-floor-not-ceiling.md  debugging.md  dependencies.md  design-quality-gates.md  documentation-drift-prevention.md  documentation.md  local-quality-mirrors-ci.md  no-prd-references-in-code.md  no-spec-distortion-for-tests.md  referent-before-label.md  rule-retroactive-application.md  soft-vs-hard-delete-policy.md  task-tracking.md  testing.md  ux-evaluation.md  verification.md
.claude/skills/backlog-management/: SKILL.md
.claude/skills/check-local/: SKILL.md
.github/workflows/: ci.yml
apps/backend/: eslint.config.mjs  knip.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
apps/frontend/: .env.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
apps/services/: Cargo.toml
apps/services/api/: Cargo.toml
apps/services/api/src/: controllers.rs  error.rs  main.rs
apps/services/api/src/controllers/: logins.rs  memos.rs
apps/services/api/src/controllers/logins/: delete.rs  session.rs
apps/services/api/src/controllers/memos/: create.rs  list.rs  read.rs  update.rs
apps/services/crates/common/: Cargo.toml
apps/services/crates/common/src/: config.rs
apps/services/crates/postgresql/: Cargo.toml
apps/services/crates/postgresql/src/: custom.rs  lib.rs
apps/services/crates/postgresql/src/custom/: app_set_add_login_session.rs  app_set_check_login_session.rs
apps/services/crates/postgresql/src/table/: memos.rs  sessions.rs  users.rs
claude_settings/: CLAUDE.md
claude_settings/.claude/: settings.json
cli/: atmp.sh
development/: docker-compose.yaml
docker/: Dockerfile.backend
docs/typespec/: main.tsp
docs/work-plan/: README.md  phase-01-tsconfig.md  phase-02-backend-eslint.md  phase-03-frontend-eslint.md  phase-04-frontend-vitest.md  phase-05-knip-ci-quality-gate.md  phase-06-claude-foundation.md  phase-07-rules.md  phase-08-quality-skills.md  phase-09-workflow-skills.md  phase-10-ux-and-verification.md  phase-11-remove-suppression-comments.md
erd/sql/: app_set_check_login_session.erd.json  app_set_delete_login_session.erd.json
erd/table/: _domain.erd.json  table.erd.json
templates/: report.md
templates/react_hono_postgres/: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  minio-cors.json  package.json
templates/underconstruction/vue_axum_postgres_simple/apps/backend/: Cargo.toml
templates/underconstruction/vue_axum_postgres_simple/apps/backend/crates/postgresql/src/: lib.rs  table.rs
templates/underconstruction/vue_axum_postgres_simple/apps/backend/src/: main.rs
templates/vue_axum_postgres/: README.md
templates/vue_axum_postgres_simple/: .gitignore  compose.yml
templates/vue_babylon_hono_postgres/: .env.example  DESIGN.md  VERIFICATION.md  compose.yml
templates/vue_hono_postgres/: README.md  compose.yml
templates/vue_rails_postgres/: .gitignore  README.md  compose.yml
(+322 files in other folders)
