[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
common = { path = "../crates/common" }
logs = { path = "../crates/logs" }
google_login = { path = "../crates/google_login" }
postgresql = { path = "../crates/postgresql" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
uuid = { workspace = true }


