[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

members = [
    "crates/*",
]

[dependencies]
axum = { workspace = true }
common = { path = "crates/common" }
chrono = { workspace = true }
postgresql = { path = "crates/postgresql" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde", "clock"] }
config = "0.15.0"
env_logger = "0.11.8"
derive_builder = "0.20"
serde = { version = "1", features=["derive"]}
serde_json = "1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "rust_decimal", "bit-vec", "ipnetwork", "mac_address", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }